slurm-helm-chart/templates/node-deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: slurm-node
spec:
  serviceName: slurm-node
  replicas: 4
  selector:
    matchLabels:
      app: slurm
      component: node
  template:
    metadata:
      labels:
        app: slurm
        component: node
    spec:
      dnsConfig:
        searches:
          - slurm-controller.tsisodia.svc.cluster.local
          - slurm-node.tsisodia.svc.cluster.local
      securityContext:
        runAsUser: 0
        allowPrivilegeEscalation: true
        capabilities:
          add: ["SYS_ADMIN"]
      containers:
      - name: slurm-node
        image: quay.io/tsisodia10/slurm-node:0.11
        volumeMounts:
        - name: slurm-node-config
          mountPath: /etc/slurm-llnl/slurm.conf
          subPath: slurm.conf
        - name: munge-key-volume
          mountPath: /etc/munge/munge.key
          subPath: munge.key
          readOnly: true
        - mountPath: /run/munge
          name: munge-socket    
      volumes:
      - name: slurm-node-config
        configMap:
          name: slurm-config
      - name: munge-key-volume
        secret:
          secretName: munge-key-1 
      - name: munge-socket
        emptyDir: {}        
  volumeClaimTemplates:
  - metadata:
      name: slurm-node-storage
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 1Gi
