slurm-helm-chart/templates/controller-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: slurm-controller
spec:
  clusterIP: None
  selector:
    app: slurm-controller
    component: controller
  ports:
    - protocol: TCP
      port: 6817
      targetPort: 6817
      name: slurm-controller
