slurm-helm-chart/templates/node-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: slurm-node
spec:
  type: ClusterIP
  ports:
    - port: 6818 
      targetPort: 6818
      protocol: TCP
      name: slurm-node
  selector:
    app: slurm
    component: node
